Fixed drop shadow bug on firefox

--- a/style.css
+++ b/style.css
@@ -75,9 +75,11 @@ body {
 
 .sizes button {
   padding: 0.5rem 2rem;
+  margin: 0 0.5rem;
   background: none;
   border: none;
-  box-shadow: 0 5px 10px rgba(0,0,0,0.2);
+  border: 1px solid #585858;
+  filter: drop-shadow(0 5px 10px rgba(0,0,0,0.2));
   border-radius: 30px;
   cursor: pointer;
   font-weight: bold;
@@ -102,6 +104,8 @@ button.active {
   border: none;
   color: white;
   cursor: pointer;
-  border-radius: "30px";
+  border-radius: 30px;
   font-weight: bolder;
+  filter: drop-shadow(0 5px 10px rgba(0,0,0,0.2));
+
 }
